# Dissertation_NDF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
cmake/: python_project.pyproj.in
data/dataset/: dataset_G_1000.npz
data/model/: model_G1.pth  model_G1_CNN_100K.pth  model_G1_CNN_10K.pth  model_G1_CNN_1k.pth  model_G1_CNN_GAP_100K.pth  model_G1_CNN_GAP_DW.pth  model_G1_CNN_GAP_S_100K.pth  model_G1_FCNN_100K.pth  model_G1_FCNN_10K.pth
src/: main.cpp  wrapper.cpp
src/Python/: dataset_G.py  dataset_L.py  evaluation.py  evaluation_G.py  evaluation_L.py  inference_comparision_G.py  model_G.py  model_L.py  ndf_py.pyd  smoke_test.py  testZ_G.py
